--- a/app.json
+++ b/app.json
@@ -31,7 +31,7 @@
   "window": {
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#3e3f42",
-    "navigationBarTitleText": "眼镜商城",
+    "navigationBarTitleText": "眼镜店客户管理软件100",
     "navigationBarTextStyle": "white"
   },
   "tabBar": {
